--- a/config/bhmenu-client.toml
+++ b/config/bhmenu-client.toml
@@ -4,7 +4,7 @@
 partner_id = "5613"
 #The id of this modpack.
 #(This is BH internal pack id; Find the id here: https://www.bisecthosting.com/partners/console.php)
-pack_id = ""
+pack_id = "19220"
 #Set this to false to disable pack config screen and enable user configs instead.
 #This should always be done by the pack author once they are done with configuring the pack.
 #To re-enable Pack Edit Mode, please edit the config file.
@@ -20,7 +20,7 @@ pack_edit_mode = true
 			#The title to display at the top of the entry.
 			title = "Need a server?"
 			#The description to display below the title.
-			description = "Click me to get your own server!"
+			description = "Be sure to use the promo code 'PandaMC' for 25% off 1st month!"
 			#Set this to true to use specific language translation keys.
 			#This requires a custom mod that adds resource files, such as OpenLoader.
 			#Use 'server_entry.title' key for the Title;
