fix jei hiding random idea ahhh

--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -1,12 +1,9 @@
 hammerlib:test_machine
 hammerlib:wrench
-create:copper_diving_helmet
-create:netherite_backtank
-create:copper_diving_boots
-create:hand_crank
-create:railway_casing
-create_sa:grapplin_whisk
-create:brass_ingot
-create:wrench
-create:brown_toolbox
 ae2:charger
+createaddition:electrum_spool
+createaddition:electrum_sheet
+createaddition:electrum_nugget
+createaddition:electrum_ingot
+createaddition:electrum_wire
+createaddition:electrum_rod
