--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -12,7 +12,6 @@ Comforts
 Construction Wand
 Crafting On A Stick
 Crafting Station
-CraftingCraft
 Create
 Create Block
 Create Crafts & Additions
@@ -66,3 +65,4 @@ MythicBotany
 Spirit
 Create Sifter
 HammerLib
+Compressium
