--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -3,6 +3,7 @@ Angel Block Renewed
 Angel Ring 2
 Apple Crates
 Applied Energistics 2
+Applied Botanics
 Ars Creo
 Ars Elemental
 Ars Nouveau
@@ -19,15 +20,17 @@ Create Deco
 Create Enchantment Industry
 Create Jetpack
 Create Mechanical Extruder
+Create Sifter
 Create Slice & Dice
+Create: Steam 'n' Rails
 Create Stuff & Additions
-Create: Steam 'n Rails
 Drink Beer Refill
 Enhanced Mob Spawners
 FTB Quests
 Farmer's Delight
 Farming for Blockheads
 Forbidden & Arcanus
+Gateways To Eternity
 Item Filters
 Lootr
 Macaw's Bridges
@@ -38,6 +41,7 @@ Macaw's Lights and Lamps
 Macaw's Roofs
 Macaw's Trapdoors
 Macaw's Windows
+MythicBotany
 Patchouli
 Progressive Bosses
 Quark
@@ -50,6 +54,7 @@ Skyblock Builder
 Sophisticated Backpacks
 Sophisticated Core
 Spice of Life: Carrot Edition
+Summoning Rituals
 Tempad
 Tom's Simple Storage Mod
 Torchmaster
@@ -58,11 +63,7 @@ Wither Skeleton Tweaks
 Witherproofed
 Functional Storage
 Starbunclemania
-Tesseract
-Applied Botanics
-Gateways To Eternity
-MythicBotany
 Spirit
-Create Sifter
 HammerLib
-Compressium
+
+
