--- a/config/jei/ingredient-list-type-sort-order.ini
+++ b/config/jei/ingredient-list-type-sort-order.ini
@@ -2,3 +2,5 @@ net.minecraft.world.item.ItemStack
 net.minecraftforge.fluids.FluidStack
 snownee.lychee.core.post.PostAction
 me.codexadrian.spirit.compat.jei.ingredients.EntityIngredient
+com.almostreliable.summoningrituals.compat.viewer.common.MobIngredient
+com.almostreliable.summoningrituals.recipe.component.BlockReference
