--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -9,6 +9,37 @@ minecraft:furnace
 minecraft:smithing
 minecraft:smoking
 minecraft:stonecutting
+summoningrituals:altar
+create_mechanical_extruder:extruding
+createsifter:sifting
+create:mystery_conversion
+create:automatic_brewing
+create:automatic_packing
+create:automatic_shaped
+create:automatic_shapeless
+create:block_cutting
+create:crushing
+create:deploying
+create:draining
+create:fan_blasting
+create:fan_haunting
+create:fan_smoking
+create:fan_washing
+create:item_application
+create:mechanical_crafting
+create:milling
+create:mixing
+create:packing
+create:pressing
+create:sandpaper_polishing
+create:sawing
+create:sequenced_assembly
+create:spout_filling
+create:wood_cutting
+create_enchantment_industry:disenchanting
+createaddition:charging
+createaddition:liquid_burning
+createaddition:rolling
 ae2:attunement
 ae2:certus_growth
 ae2:charger
@@ -34,35 +65,6 @@ botania:petals
 botania:pure_daisy
 botania:runic_altar
 botania:terra_plate
-create:automatic_brewing
-create:automatic_packing
-create:automatic_shaped
-create:automatic_shapeless
-create:block_cutting
-create:crushing
-create:deploying
-create:draining
-create:fan_blasting
-create:fan_haunting
-create:fan_smoking
-create:fan_washing
-create:item_application
-create:mechanical_crafting
-create:milling
-create:mixing
-create:mystery_conversion
-create:packing
-create:pressing
-create:sandpaper_polishing
-create:sawing
-create:sequenced_assembly
-create:spout_filling
-create:wood_cutting
-create_enchantment_industry:disenchanting
-create_mechanical_extruder:extruding
-createaddition:charging
-createaddition:liquid_burning
-createaddition:rolling
 drinkbeer:brewing
 farmersdelight:cooking
 farmersdelight:cutting
@@ -82,7 +84,7 @@ mythicbotany:rune_ritual
 spirit:soul_cage_tier
 spirit:soul_engulfing
 spirit:soul_transmutation
-vtweaks:fluid_conversion
-createsifter:sifting
-lychee:item_inside/minecraft/default
 lychee:block_crushing/minecraft/default
+lychee:item_exploding/minecraft/default
+lychee:item_inside/minecraft/default
+vtweaks:fluid_conversion
