mods and fix build

--- a/server/server.properties
+++ b/server/server.properties
@@ -45,8 +45,8 @@ require-resource-pack=false
 resource-pack=
 resource-pack-prompt=
 resource-pack-sha1=
-server-ip=158.62.206.92
-server-port=25565
+server-ip=
+server-port=
 simulation-distance=7
 spawn-animals=true
 spawn-monsters=true
