--- a/minecraft/config/skyblockbuilder/common-config.json5
+++ b/minecraft/config/skyblockbuilder/common-config.json5
@@ -198,7 +198,7 @@
     "biomes": {
       "minecraft:overworld": {
         "allow_list": false,
-        "elements": []
+        "elements": ["minecraft:cold_ocean", "minecraft:deep_cold_ocean", "minecraft:deep_frozen_ocean", "minecraft:deep_lukewarm_ocean", "minecraft:lukewarm_ocean", "minecraft:frozen_ocean", "minecraft:warm_ocean", "minecraft:cold_ocean", "minecraft:deep_ocean"]
       },
       "minecraft:the_nether": {
         "allow_list": false,
